2008-03-15  Frank Warmerdam <warmerdam@pobox.com>

	* rename INSTALL to INSTALL.TXT to avoid screwing up "make install"
	* Rework win32 makefiles to support "make install", and better 
	knowledge of grid shift files, 
2008-01-18  IGNF  <didier.richard@ign.fr>

	* PJ_eqc.c : Merged eqr and eqc after advise from Gerald. eqc is
	now generalized (supports latitude of origin). Cleaned files
	including eqr.
	* IGNF catalogue : changed accordingly. Added proj_outIGN.dist-real
	in nad directory to get real coordinates for unit tests.

2008-01-05  IGNF  <didier.richard@ign.fr>

	* PJ_eqr.c: src/PJ_eqr.c added. src/pj_list.h modified (added eqr).
	src/Makefile.am, src/makefile.vc modified (added PJ_eqr.c and al).
	As automake 1.10 is missing, src/Makefile.in modified by hand.
	* PJ_glabsgm.c: src/PJ_glabsgm.c added. src/pj_list.h modified (added glabsgm).
	src/Makefile.am, src/makefile.vc modified (added PJ_glabgsm.c and al).
	As automake 1.10 is missing, src/Makefile.in modified by hand.
	* IGNF catalogue: nad/IGNF added. nad/ntf_r93.gsb added, nad/Makefile.am
	modified (added IGNF, ntf_r93.gsb little endian release)
	nad/README modified (added IGNF, ntf_r93.gsb).
	As automake 1.10 is missing, nad/Makefile.in modified by hand.
	* Specific IGN release : configure.in
	ChangeLog

2007-12-21  Frank Warmerdam  <warmerdam@pobox.com>

	* Prepare 4.6.0 final release.

2007-12-21  Andrey Kiselv  <dron@ak4719.spb.edu>

	* PJ_wag3.c: Added missed "lat_ts" parameter to projection description
	string.

2007-12-20  Frank Warmerdam  <warmerdam@pobox.com>

	* pj_list.h, Makefile.am, PJ_mpoly.c: Removed mpoly projection.  It
	was just a dummy (no actual transformation).

2007-12-06  Frank Warmerdam  <warmerdam@pobox.com>

	* pj_factors.c: in the case of phi=90, the derived should be calculated
	at [90-delta,90] instead of at [90,90+delta] (the same is true for -90)
	http://bugzilla.remotesensing.org/show_bug.cgi?id=1605
	
2007-12-03  Frank Warmerdam  <warmerdam@pobox.com>
